--- a/config.toml
+++ b/config.toml
@@ -40,11 +40,16 @@ url = "/posts"
 weight = 2
 
 [[menu.main]]
+name = "tils"
+url = "/tils"
+weight = 3
+
+[[menu.main]]
 name = "about"
 url = "/about"
-weight = 3
+weight = 4
 
 [[menu.main]]
 name = "tags"
 url = "/tags"
-weight = 4
+weight = 5
